--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -79,3 +79,47 @@ header nav ul li a:hover {
     text-align: center;
 }
 /* about me end 
+
+/* work start */
+.Portfolio {
+    width: 100%;
+    margin: 0 auto;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    text-align: center;
+}
+
+.work-tiles {
+    /* this margin changes the space between boxes */
+    margin: 20px;
+    flex: 1;
+    color: blue;
+}
+
+.work-tiles img {
+    width: 100%;
+    height: 100%;
+    flex: 1 12%;
+    position: sticky;
+    z-index: -1;
+}
+
+.work-tile-bio {
+    padding: 15px;
+    line-height: 1.3;
+    position: absolute;
+    border: 3px solid black; 
+    background: red;
+}
+
+.work-tile-bio h3 {
+    font-size: 28px;
+}
+
+.work-tile-bio h4 {
+    font-weight: lighter;
+    font-size: 22px;
+    margin-bottom: 15px;
+}
+/* work end */
