--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -123,3 +123,17 @@ header nav ul li a:hover {
     margin-bottom: 15px;
 }
 /* work end */
+
+.flex-row {
+    display: flex;
+}
+
+.resume embed {
+    width: 100%;
+    height: 100%;
+    margin: 0 auto;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    text-align: center;
+}
