--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -30,6 +30,8 @@ header {
     justify-content: space-between;
     flex-wrap: wrap;
     position: sticky;
+    position: -webkit-sticky;
+    top: 0;
     z-index: 9999;
   }
   
